--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="services/api-services.js"></script>
     <link rel="stylesheet" href="home/home.css">
     <script src="home/home.js"></script>
+    <link rel="stylesheet" href="cart/cart.css">
+    <script src="cart/cart.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
